testdata/invalid/internal/domain/order/handler/http/bad_handler.go
package http

import _ "github.com/kimtaeyun/testproject-dc-invalid/internal/domain/user/core/model"

func BadHandle() {}
